--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>الفصل الأول: حجم الخلية</title>
+  <title>الفصل الأول: الخلية</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>الفصل الأول: حجم الخلية</h1>
+  <h1>الفصل الأول: الخلية</h1>
 
   <div id="quiz"></div>
 
@@ -30,3 +30,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
